# welspy-fastapi-backend

./: .env.docker  .gitignore  Dockerfile  README.md  cloudbuild.yaml  docker-compose.yaml  pyproject.toml
app/: dependencies.py  main.py
app/apis/: __init__.py
app/apis/recommendations/: routers.py  schemas.py  service.py
app/config/: db.py  settings.py
app/enums/: enum.py
