[tool.poetry]
name = "fastapi-backend"
version = "0.1.0"
description = ""
authors = ["moonwlsdnl <moonwlsdnl@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["standard"], version = "^0.114.1"}
sqlalchemy = "^2.0.34"
pydantic-settings = "^2.5.2"
python-dotenv = "^1.0.1"
pymysql = "^1.1.1"
aiomysql = "^0.2.0"
greenlet = "^3.1.0"
pandas = "^2.2.2"
scikit-learn = "^1.5.2"
aioredis = "2.0.0"
uvicorn = "^0.30.6"
apscheduler = "^3.10.4"
requests = "^2.32.3"
cryptography = "^43.0.1"
redis = "^5.1.1"
httpx = "^0.27.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


